# firba

./: .gitignore
client/: .eslintrc.cjs  index.html  package-lock.json  package.json
client/src/: App.tsx
server/: Cargo.toml
server/src/: db.rs  jwt.rs  lib.rs  main.rs
server/src/auth/: mod.rs  router.rs
server/src/models/: mod.rs  todos.rs  user.rs
server/src/todos/: repo.rs  router.rs
server/src/users/: mod.rs  repo.rs  router.rs
