[package]
name = "firba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
pwhash = "1.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "tls-rustls", "uuid", "chrono"] }
tokio = { version = "1.35.1", features = ["net", "macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }
